Three features in one commit: - external changes of tasks code triggers recomputation - more than one file with code - execution.directory of each task for changing the current directory during tasks' execution

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,10 @@
 
 export(add.objectrecord)
 export(add.parent)
+export(add_source_file)
 export(are.two.metadatas.equal)
 export(create.metadata)
+export(get.codepath)
 export(get.object)
 export(load.metadata)
 export(load.object)
