Another batch of changes. Rewritten code that deals with reading the cached values

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,12 +11,12 @@ export(add_source_file)
 export(append_env_to_env)
 export(are.two.metadatas.equal)
 export(create_metadata)
-export(get.object)
 export(get_code)
 export(get_main_code)
+export(get_object)
 export(get_path)
-export(load.object)
 export(load_metadata)
+export(load_object)
 export(make_sure_metadata_is_saved)
 export(metadata.digest)
 export(metadata.dump)
